# SwiftHook

./: CMakeLists.txt  Config.h  LICENSE  README.md  TrampolineAllocator.h  Types.h
examples/: CMakeLists.txt  FunctionInterception.cpp  SimpleHook.cpp
src/: Disassembler.cpp  Disassembler.h  HookManager.cpp  HookManager.h  SwiftHook.cpp  SwiftHook.h  ThreadFreezer.cpp  ThreadFreezer.h  TrampolineAllocator.cpp  Types.h
tests/: BasicTests.cpp  CMakeLists.txt  TestHooks.cpp
